crates/ui/tests/snapshots/key_bindings_screen__a_key_bound_twice_moves_and_the_loser_shows_not_mapped.snap
---
source: crates/ui/tests/key_bindings_screen.rs
expression: h.snapshot()
---
                                                                                                    
  ┌─ Key bindings · Right-handed ────────────────────────────────────────────────────────────────┐  
  │                                                                                              │  
  │                           Key 1             Key 2             Key 3                          │  
  │ Must have a key                                                                              │  
  │   Cursor up               Up                ·                 ·                              │  
  │   Cursor down             Down              ·                 ·                              │  
  │   Cursor left             Left              ·                 ·                              │  
  │   Cursor right            Right             ·                 ·                              │  
  │   Confirm                 f                 e                 ·                              │  
  │   Cancel  + Escape        d                 ·                 ·                              │  
  │   End turn                Space             ·                 ·                              │  
  │                                                                                              │  
  │ Optional                                                                                     │  
  │   Select                  ·                 ·                 ·                 ! not mapped │  
  │   Confirm end turn        ·                 ·                 ·                 ! not mapped │  
  │   Previous ready unit     a                 ·                 ·                              │  
  │   Next ready unit         s                 ·                 ·                              │  
  │   Unit info               ·                 ·                 ·                 ! not mapped │  
  │   Danger zone             w                 ·                 ·                              │  
  │   Auto-end on/off         Shift+Space       ·                 ·                              │  
  │   Rewind                  r                 ·                 ·                              │  
  │   Map menu                ·                 ·                 ·                 ! not mapped │  
  │                                                                                              │  
  │   Restore defaults                                                                           │  
  │                                                                                              │  
  │                                                                                              │  
  └──────────────────────────────────────────────────────────────────────────────────────────────┘  
                                                                                                    
                                                                                                    
                                                                                                    
                            arrows move · f bind · Delete clear · d back                            
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aabbcccccccccccccccccccccccccccccbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddeeeeedddddddddddddeeeeedddddddddddddeeeeeddddddddddddddddddddddddddbaa
aabdfffffffffffffffddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddcccccccddddddddddddddddddddddddddddddddddggggggggggggggggdddeddddddddddddddddddddddddddddddbaa
aabdddddddddddeeeeeeeeddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdffffffffdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddeeeeeeeeeeeedbaa
aabdddddddddddddddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddeeeeeeeeeeeedbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddhhhhhhhhhdddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddeeeeeeeeeeeedbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddeeeeeeeeeeeedbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:text_dim bg:panel_bg
f = fg:panel_border_focus bg:panel_bg
g = fg:panel_bg bg:panel_border_focus
h = fg:white bg:panel_bg
i = fg:text_dim bg:black
